# Havel

./: .gitignore  AGENTS.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_MIGRATION.md  BRANCHES.md  CLAUDE.md  CMakeLists.txt  CMakeLists_embed.txt  CMakeLists_windows.txt  COMPOSITOR.md  DOCUMENTATION.md  Dockerfile  EVENT_MONITOR.md  FINAL_IMPLEMENTATION.md  HOTKEYS_PROGRESS.md  Havel.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  JIT_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  MODES_HOTKEYS_STATUS.md  MPV_ENHANCED.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PHASE6_COMPLETE.md  PHASE6_INTEGRATION_COMPLETE.md  PKGBUILD  README.md  RECENT_CHANGES.md  REFACTORING_SUMMARY.md  REFACTOR_PROGRESS.md  REFACTOR_SUMMARY.md  REMAPPED_KEYS_FIX.md  SERVICE_LAYER_MIGRATION.md  STDLIB_PHASE5.md  SYNTAX.md  TIMER_THREAD_SAFETY.md  TODO.md  WARP.md  actual_hotkeys.txt  (+152 more)
.github/workflows/: ci.yml  cmake-single-platform.yml
benchmarks/: fib.havel
cmake/: BootstrapCompiler.cmake  QtX11Fix.h.in
contents/code/: main.js
data/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  ARCHITECTURE_REFACTOR_COMPLETE.md  ARCHITECTURE_TODO.md  ASYNC_AWAIT_IMPLEMENTATION.md  AUTOMATION_MODULE.md  BUG_FIXES_SUMMARY.md  CALLBACK_ID_FLOW.md  CHANGELOG_FEATURES.md  CLASSES_AND_STRUCTS.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_FIXES_PART2.md  COLLECTIONS.md  CONCURRENCY_EXECUTION_MODEL.md  CONCURRENCY_READY_FOR_IMPLEMENTATION.md  CONCURRENCY_VALIDATION.md  CONDITION_SYSTEM_ARCHITECTURE.md  CONFIG_OPERATOR_AND_BRIGHTNESS_DEBUG.md  CONSOLIDATION_PLAN.md  EMBEDDING.md  EVALUATOR_ARCHITECTURE.md  EVALUATOR_EXTRACTION.md  EVENTLISTENER_REFACTOR_STATUS.md  FIBER_IMPLEMENTATION_COMPLETE.md  GRAMMAR.md  GTK_IMGUI_EXTENSIONS.md  GUI_MODULE.md  HOST_MODULES.md  HOST_SERVICE_ARCHITECTURE.md  HYBRID_ENGINE.md  Havel.md  IMPLEMENTATION_2.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPORT_SYSTEM_IMPLEMENTED.md  IMPROVEMENTS.md  INTEGRATION.md  IO_REFACTOR.md  ITERATION_PROTOCOL.md  JIT_IMPLEMENTATION.md  (+71 more)
docs/ffi/: README.md  examples.md  internals.md  patterns.md
embed/: BUILD_NOTES.md  IMPLEMENTATION.md  INTEGRATION_SUMMARY.md  README.md
examples/: calculator.havel  example_embed.cpp  example_game.cpp  example_gtk.hv  example_imgui.hv  example_wm.cpp  io_refactor_examples.cpp  paint.havel  simple_gui_example.cpp  test_capi.cpp  test_capi_simple.c  test_embed.cpp  ui_declarative.hv  ui_example.hv
include/: Havel-cAPI.h  Havel.hpp  havel.h  llvm.h  qt.hpp  types.hpp  x11.h  x11_defs.h
include/core/: DisplayManager.hpp
modules/: ast.hv  async.hv  audio.hv  bundle_compiler.py  compile_bundle.hv  compile_bundle2.hv  compiler.hv  compiler_bundle.hv  compiler_run.hv  config.hv  crypto.hv  debug.hv  debug_hash.hv  debug_hotkey.hv  debug_self2.hv  debug_self_parse.hv  device.hv  display.hv  dsl_syntax.hv  emitter.hv  env.hv  error.hv  evdev.hv  fsuv.hv  gamepad.hv  group.hv  image.hv  ini.hv  io.hv  json.hv  keyboard.hv  keymap.hv  launch_closures.hv  launch_complex.hv  launch_fib.hv  launch_fib2.hv  launch_fib3.hv  launch_fib4.hv  launch_fib_serialize.hv  launcher.hv  (+98 more)
modules/app/: alt_tab.hv  app.hv  async.hv  async.hvc  audio.hv  automation.hv  brightness.hv  brightness.hvc  compositor.hv  compositor.hvc  daynight.hv  ddc.hv  display.hv  display.hvc  drm_brightness.hv  event_listener.hv  gamma_ramp.c  image.hv  io.hv  keyboard.hv  keytap.hv  lc.hv  libmpv.hv  media.hv  modes.hv  mouse.hv  mpv.hv  mpv.hvc  opencv.hv  protocols.hv  protocols.hvc  socket.hv  socket.hvc  window.hv  window.hvc  winmatch.hv  winwatch.hv  x11.hv  x11.hvc  zoom.hv
modules/bit/: bit.hv  bit.hvc
modules/core/: process.hv
modules/fmt/: fmt.hv
modules/help/: help.hv
modules/lang/: ast.hv  ast.hvc  debug.hv  debug.hvc  emitter.hv  emitter.hvc  error.hv  error.hvc  fmt.hv  fmt.hvc  help.hv  launcher.hv  lexer.hv  lexer.hvc  libtest.hv  loader.hv  loader.hvc  math.hv  mod_test.hv  optimizer.hv  pratt.hv  pratt.hvc  scope.hv  scope.hvc  test_aot_simple.hv  test_bc_debug.hv  test_import_emit.hv  test_import_min.hv  test_mod.hv  test_pipeline.hv  test_pipeline3.hv  textchunker.hv  types.hv  types.hvc  validator.hv
modules/std/: archive.hv  (+45 more)
scripts/: build-aot-jit.sh  example.hv  example0.hv  example_gtk_events.hv  exmple-oop.hv  fs_log_find.hv  havel_diag_lex.hv  havel_diag_parse.hv  havel_diag_runtime.hv  havel_diag_semantic.hv  havel_inv_closure.hv  havel_inv_early_return.hv  havel_inv_ip.hv  havel_iterables.hv  havel_throw_across.hv  havel_try.hv  havel_try_all.hv  havel_try_finally_rethrow.hv  hotkeys.hv  hv_hof_allsemi.hv  hv_invariant_closure.hv  hv_invariant_closure2.hv  hv_invariant_return.hv  hv_invariant_throw.hv  hv_map.hv  hv_map2.hv  hv_map3.hv  hv_map4.hv  hv_map5.hv  hv_map_direct.hv  hv_map_host.hv  hv_map_len.hv  hv_map_probe.hv  hv_map_ret.hv  hv_map_type.hv  hv_min.hv  hv_print_array.hv  hv_print_nullarr.hv  install-udev-rules.sh  math_module.hv  (+270 more)
src/: Havel.cpp  game  havel_minimal_cli.cpp  main.cpp  test.cpp
src/core/automation/: AutoClicker.cpp  AutoClicker.hpp  AutoKeyPresser.cpp  AutoKeyPresser.hpp  AutoPresser.cpp  AutoPresser.hpp  AutoRunner.cpp  AutoRunner.hpp  AutomationManager.cpp  AutomationManager.hpp  CMakeLists.txt  ChainedTask.cpp  ChainedTask.hpp  PixelAutomation.cpp  PixelAutomation.hpp  Task.hpp
src/wm/: CMakeLists.txt  compositor.cpp  server.cpp  wlr_bridge.c  wlr_bridge.h
stdlib/: array.hv  list.hv  math.hv  object.hv  string.hv  testmod.hv  type.hv
test/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .scroll_blocker.ko.cmd  .scroll_blocker.mod.cmd  .scroll_blocker.mod.o.cmd  .scroll_blocker.o.cmd  Makefile  grab.cpp  modules.order  scroll_blocker.c  scroll_blocker.ko  scroll_blocker.mod  scroll_blocker.mod.c  send.cpp
tests/: NetworkExample.cpp  TestGUI.cpp  VMFixesTest.cpp  main_test.cpp  phase2_integration_test.cpp  test_brightness.cpp  test_embed_api.cpp  test_extension_loading.cpp  test_havel.cpp  test_phase3_main_loop.cpp  test_signal_mode_pipeline.hv
vscode-extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json
(+1740 files in other folders)
